# fastapi-zero

./: .coverage  README.md  pyproject.toml
fast_zero/: app.py
tests/: test_app.py
